# dbc-codegen2

./: .gitignore  .gitmodules  Cargo.toml  README.md
codegen-tests/: Cargo.toml  problems.txt
codegen-tests/src/: lib.rs
codegen-tests/test-files/: explanation.txt
codegen-tests/test-files/comptime-problems/: example.dbc
codegen-tests/test-files/currently-work/: example.dbc
codegen-tests/test-files/test-problems/: causes_overflow.dbc
data/: Cargo.toml  generated.cpp  generated.hpp  generated.rs  sample_output.cpp
data/src/: lib.rs  main.rs
src/: app.rs  lib.rs  main.rs  utils.rs
src/codegen/: config.rs  cpp.rs  generator.rs  mod.rs  rust.rs
src/codegen/rust/: mod.rs  sample_output.rs  test.rs
src/ir/: dbc.rs  helpers.rs  identifier.rs  ir_builder.rs  message.rs  message_layout.rs  mod.rs  node.rs  signal.rs  signal_extended_value_type.rs  signal_layout.rs  signal_value_enum.rs  signal_value_type.rs  value_description.rs
src/middle_end/nodes/: bitvec_postition_computer.rs  check.rs  helpers.rs  message_id_checker.rs  message_name_sanitizer.rs  message_sanitizer.rs  message_signal_usage_attacher.rs  message_signal_usage_checker.rs  mod.rs  msg_name_sanitizer.rs  relevant_msg_filter.rs  signal_enum_sanitizer.rs  signal_enum_sanitizer_node.rs  signal_enum_signal_name_sanitizer.rs  signal_layout_checker.rs  signal_name_sanitizer.rs  signal_range_checker.rs  signal_scaling_safety_checker.rs  signal_type_inferer.rs  signal_value_enum_attacher.rs  signal_value_enum_node.rs  (+10 more)
src/nodes/: mod.rs  signal_value_enum_node.rs  transformation_node.rs
(+3 files in other folders)
