[workspace]
members = [
    ".",
    "data"
]

[package]
name = "dbc-codegen2"
version = "0.1.1"
edition = "2024"
description = "DBC code generator for CAN bus messages"
license = "MIT"
repository = "https://github.com/iColgateZz/dbc-codegen2"
readme = "README.md"
keywords = ["can", "dbc", "codegen", "embedded", "automotive"]
categories = ["embedded", "automotive"]

[dependencies]
can-dbc = "8.0.0"
embedded-can = "0.4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
clap = { version = "4", features = ["derive"] }
